--- a/build.gradle
+++ b/build.gradle
@@ -26,3 +26,24 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+// Define versions in a single place
+ext {
+    // Sdk and tools
+    minSdkVersion = 19
+    targetSdkVersion = 28
+    compileSdkVersion = 28
+    buildToolsVersion = '28.0.3'
+    kotlinVersion = '1.3.20'
+    ktxVersion = '1.0.1'
+
+    // App dependencies
+    playServicesVersion = '17.3.4'
+    retrofitVersion = '2.1.0'
+    rxandroidVersion = '2.0.2'
+    rxjavaVersion = '2.1.3'
+    ankoVersion = '0.10.1'
+    glideVersion = '4.9.0'
+    glidetransfVersion = '3.1.1'
+    koinVersion = '2.0.1'
+}
